--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -15,22 +15,10 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="215dp"
-        android:layout_marginBottom="497dp"
-        android:text="@string/title_welcome" />
-
-    <Button
-        android:id="@+id/button_first"
-        android:layout_width="107dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="152dp"
-        android:layout_marginTop="270dp"
-        android:layout_marginBottom="413dp"
-        android:text="@string/txt_button1" />
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="494dp"
+        android:text="@string/title_welcome"
+        android:textSize="23sp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -42,10 +30,26 @@
         android:id="@+id/button_third"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="153dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="366dp"
+        android:layout_marginEnd="125dp"
+        android:layout_marginBottom="317dp"
         android:text="@string/txt_button2" />
+
+    <Button
+        android:id="@+id/button_first"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="260dp"
+        android:layout_marginEnd="126dp"
+        android:layout_marginBottom="423dp"
+        android:text="@string/txt_button1" />
 
 </RelativeLayout>
